# nomad

./: README.md  home.html  styles.css
html/: README.md  home.html  styles.css
kokoa-clone/: chats.html  find.html  friends.html  index.html  kokoa-page1.html  kokoa-page2.html
kokoa-clone/css/: reset.css  status-bar.css  style.css  variables.css
python/: class.py  file.py  main.py  player.py  scraping.py
python/practice/: dogs.py  file.py  player.py  playwright.py
python/practice/airbnb-clone-backend/: pyproject.toml
python/practice/airbnb-clone-backend/common/: models.py
python/practice/airbnb-clone-backend/config/: settings.py
python/practice/airbnb-clone-backend/experiences/: admin.py  models.py
python/practice/airbnb-clone-backend/experiences/migrations/: 0001_initial.py
python/practice/airbnb-clone-backend/houses/: admin.py  models.py
python/practice/airbnb-clone-backend/houses/migrations/: 0001_initial.py
python/practice/airbnb-clone-backend/rooms/: admin.py  models.py
python/practice/airbnb-clone-backend/rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py
python/practice/airbnb-clone-backend/users/: admin.py  models.py
python/practice/airbnb-clone-backend/users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_currency.py
python/practice/webscrapper/: .gitignore  dogs.py  file.py  main.py  playwright_test.py  pyproject.toml  result.xlsx  scraping.py  settings.json  test.py  webcrolling.ipynb  네이버로그인자동화.py  셀레니움_기본설정.py
python/templates/: home.html
(+16 files in other folders)
