[tool.poetry]
name = "webscrapper"
version = "0.1.0"
description = ""
authors = ["OYEs <160278000+yjuni0@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.46.0"
black = "^24.8.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
